scripts/istioyaml/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 134.44.36.120
  ports:
    - name: status-port
      nodePort: 32538
      port: 15020
      protocol: TCP
      targetPort: 15020
    - name: http2
      nodePort: 31380
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      nodePort: 31390
      port: 443
      protocol: TCP
      targetPort: 443
    - name: tcp
      nodePort: 31400
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: https-kiali
      nodePort: 31150
      port: 15029
      protocol: TCP
      targetPort: 15029
    - name: https-prometheus
      nodePort: 32561
      port: 15030
      protocol: TCP
      targetPort: 15030
    - name: https-grafana
      nodePort: 32158
      port: 15031
      protocol: TCP
      targetPort: 15031
    - name: https-tracing
      nodePort: 32124
      port: 15032
      protocol: TCP
      targetPort: 15032
    - name: tls
      nodePort: 30201
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
  sessionAffinity: None
  type: LoadBalancer
