scripts/istioyaml/test-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh-gateway
  namespace: mesh-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
      - xxxxxx.oauthd.com
      port:
        name: http-9080
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xxxxxx
  namespace: default
spec:
  gateways:
    - mesh-gateway.mesh-system.svc.cluster.local
  hosts:
    - xxxxxx.oauthd.com
  http:
    - route:
        - destination:
            host: xxxxxx.default.svc.cluster.local
            port:
              number: 80
            subset: v3
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: xxxxxx
  namespace: mesh-system
spec:
  host: xxxxxx.default.svc.cluster.local
  subsets:
    - labels:
        version: v3
      name: v3
