scripts/istioyaml/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: xxxxxx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xxxxxx
spec:
  hosts:
    - "*"
  gateways:
    - xxxxxx-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /api/v1/xxxxxx
      route:
        - destination:
            host: xxxxxx
            subset: v3

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: xxxxxx
  namespace: default
spec:
  host: xxxxxx
  subsets:
    - labels:
        version: v3
      name: v3
